--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,4 +1,4 @@
 <ul class="list-group">
-    <li (click)="setCurrentBrand()" class="list-group-item list-group-item-success">Brand</li>
-    <li (click)="setCurrentBrand(brand)" *ngFor="let brand of brands" [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
+    <li (click)="setCurrentBrand()" routerLink="/cars" class="list-group-item list-group-item-success">Brand</li>
+    <li (click)="setCurrentBrand(brand)" routerLink="/cars/brand/{{brand.brandId}}" *ngFor="let brand of brands" [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
 </ul>
