--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,4 +1,4 @@
 <ul class="list-group">
-    <li (click)="setCurrentColor()" class="list-group-item list-group-item-success">Color</li>
-    <li (click)="setCurrentColor(color)" *ngFor="let color of colors" [class]="getCurrentColorClass(color)">{{color.colorName}}</li>
+    <li (click)="setCurrentColor()" routerLink="/cars" class="list-group-item list-group-item-success">Color</li>
+    <li (click)="setCurrentColor(color)" routerLink="/cars/color/{{color.colorId}}" *ngFor="let color of colors" [class]="getCurrentColorClass(color)">{{color.colorName}}</li>
 </ul>
