--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
 </div>
-<table *ngIf="dataLoaded==true" class="table">
+<table *ngIf="dataLoaded==true" class="table table-hover">
     <thead class="table-success">
         <tr>
             <th>Car Id</th>
@@ -13,13 +13,17 @@
             <th>Description</th>
         </tr>
     </thead>
-    <tr *ngFor="let car of cars">
-        <td>{{car.carId}}</td>
-        <td>{{car.carName}}</td>
-        <td>{{car.brandName}}</td>
-        <td>{{car.colorName}}</td>
-        <td>{{car.modelYear}}</td>
-        <td>{{car.dailyPrice}}</td>
-        <td>{{car.description}}</td>
-    </tr>
+    <tbody>
+        <tr *ngFor="let car of cars" routerLink="/cardetail/{{car.carId}}">
+            <td>{{car.carId}}</td>
+            <td>{{car.carName}}</td>
+            <td>{{car.brandName}}</td>
+            <td>{{car.colorName}}</td>
+            <td>{{car.modelYear}}</td>
+            <td>{{car.dailyPrice}} TL</td>
+            <td>{{car.description}}</td>
+        </tr>
+    </tbody>    
 </table>
+
+
