--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,29 +1,40 @@
 <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
 </div>
-<table *ngIf="dataLoaded==true" class="table table-hover">
-    <thead class="table-success">
-        <tr>
-            <th>Car Id</th>
-            <th>Car Name</th>
-            <th>Brand Name</th>
-            <th>Color Name</th>
-            <th>Model Year</th>
-            <th>Daily Price</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let car of cars" routerLink="/cardetail/{{car.carId}}">
-            <td>{{car.carId}}</td>
-            <td>{{car.carName}}</td>
-            <td>{{car.brandName}}</td>
-            <td>{{car.colorName}}</td>
-            <td>{{car.modelYear}}</td>
-            <td>{{car.dailyPrice}} TL</td>
-            <td>{{car.description}}</td>
-        </tr>
-    </tbody>    
-</table>
+<div class="row">
+    <div class="col-md-3">
+        <app-car-filter></app-car-filter>
+    </div>
+    <div class="col-md-9">
+        <div class="mb-3">
+            <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="enter car name...">
+        </div>
+        <table *ngIf="dataLoaded==true" class="table table-hover">
+            <thead class="table-success">
+                <tr>
+                    <th>Car Id</th>
+                    <th>Car Name</th>
+                    <th>Brand Name</th>
+                    <th>Color Name</th>
+                    <th>Model Year</th>
+                    <th>Daily Price</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let car of cars | carFilter:filterText" routerLink="/cardetail/{{car.carId}}">
+                    <td>{{car.carId}}</td>
+                    <td>{{car.carName}}</td>
+                    <td>{{car.brandName}}</td>
+                    <td>{{car.colorName}}</td>
+                    <td>{{car.modelYear}}</td>
+                    <td>{{car.dailyPrice |currency:"TRY":"symbol-narrow"}}</td>
+                    <td>{{car.description}}</td>
+                </tr>
+            </tbody>    
+        </table>
+    </div>
+</div>
+
 
 
