--- a/src/app/components/carDetail/car-detail/car-detail.component.html
+++ b/src/app/components/carDetail/car-detail/car-detail.component.html
@@ -3,7 +3,7 @@
           <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div *ngFor="let carImage of carImages" [class]="getCurrentImageClass(carImage)">
-                 <img src="https://localhost:44334//{{carImage.carImagePath}}" class="d-block w-100" alt="https://localhost:44334//{{carImage.carImagePath}}">
+                 <!-- <img src="https://localhost:44334/{{carImage.carImagePath}}" class="d-block w-100" alt="https://localhost:44334/{{carImage.carImagePath}}"> -->
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
@@ -27,7 +27,8 @@
           </ul>
     </div>
     <div class="my-3">
-        <a class="btn btn-dark float-end" href="/cars" role="button">Back</a>
+      <a role="button" class="btn btn-dark float-end" href="">Back</a>
+      <a role="button" class="btn btn-success float-end mx-1" href="">Rent</a>
     </div>
 </div>
 
