--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,21 +1,27 @@
 <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
 </div>
-<table *ngIf="dataLoaded==true" class="table">
-    <thead class="table-success">
-        <tr>
-            <th>Customer Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Company Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let customer of customers">
-            <td>{{customer.customerId}}</td>
-            <td>{{customer.firstName}}</td>
-            <td>{{customer.lastName}}</td>
-            <td>{{customer.companyName}}</td>
-        </tr>
-    </tbody>  
-</table>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-9">
+        <table *ngIf="dataLoaded==true" class="table">
+            <thead class="table-success">
+                <tr>
+                    <th>Customer Id</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Company Name</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let customer of customers">
+                    <td>{{customer.customerId}}</td>
+                    <td>{{customer.firstName}}</td>
+                    <td>{{customer.lastName}}</td>
+                    <td>{{customer.companyName}}</td>
+                </tr>
+            </tbody>  
+        </table>
+    </div>
+</div>
+
