--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -1,23 +1,29 @@
 <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
     <span class="visually-hidden">Loading...</span>
 </div>
-<table *ngIf="dataLoaded==true" class="table">
-    <thead class="table-success">
-        <tr>
-            <th>Rental Id</th>
-            <th>Car Name</th>
-            <th>Customer Name</th>
-            <th>Rent Date</th>
-            <th>Return Date</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let rental of rentals">
-            <td>{{rental.rentalId}}</td>
-            <td>{{rental.carName}}</td>
-            <td>{{rental.customerName}}</td>
-            <td>{{rental.rentDate | date:'dd/MM/yyyy hh:mm'}}</td>
-            <td>{{rental.returnDate | date:'dd/MM/yyyy hh:mm'}}</td>
-        </tr>
-    </tbody>  
-</table>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-9">
+        <table *ngIf="dataLoaded==true" class="table">
+            <thead class="table-success">
+                <tr>
+                    <th>Rental Id</th>
+                    <th>Car Name</th>
+                    <th>Customer Name</th>
+                    <th>Rent Date</th>
+                    <th>Return Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let rental of rentals">
+                    <td>{{rental.rentalId}}</td>
+                    <td>{{rental.carName}}</td>
+                    <td>{{rental.customerName}}</td>
+                    <td>{{rental.rentDate | date:'dd/MM/yyyy hh:mm'}}</td>
+                    <td>{{rental.returnDate | date:'dd/MM/yyyy hh:mm'}}</td>
+                </tr>
+            </tbody>  
+        </table>
+        
+    </div>
+</div>
