--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -10,7 +10,7 @@
             <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="enter car name...">
         </div>
         <table *ngIf="dataLoaded==true" class="table table-hover">
-            <thead class="table-success">
+            <thead class="table-secondary">
                 <tr>
                     <th>Car Id</th>
                     <th>Car Name</th>
