--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-3"></div>
     <div class="col-md-9">
         <table *ngIf="dataLoaded==true" class="table">
-            <thead class="table-success">
+            <thead class="table-secondary">
                 <tr>
                     <th>Customer Id</th>
                     <th>First Name</th>
