--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -20,7 +20,8 @@
             <input type="text" class="form-control" id="cvv" placeholder="000">
         </div>
         <br><br>
-        <a role="button" class="btn btn-primary float-end" href="">Pay</a>
+        <button class="btn btn-outline-dark float-end" routerLink="/cardetail/{{rental.carId}}">Back</button>
+        <button class="btn btn-primary float-end mx-1" routerLink="">Pay</button>
     </form>
 </div>
 
