--- a/src/app/components/carDetail/car-detail/car-detail.component.html
+++ b/src/app/components/carDetail/car-detail/car-detail.component.html
@@ -17,12 +17,12 @@
           </div>
     </div>
     <div class="col-md-3">
-        <ul class="list-group" *ngFor="let car of cars">
+        <ul class="list-group">
             <li class="list-group-item list-group-item-dark"><b>{{car.carName}}</b></li>
             <li class="list-group-item"><b>Brand:</b> {{car.brandName}}</li>
             <li class="list-group-item"><b>Color:</b> {{car.colorName}}</li>
             <li class="list-group-item"><b>Model Year:</b> {{car.modelYear}}</li>
-            <li class="list-group-item"><b>Daily Price:</b> {{car.dailyPrice |currency:"TRY":"symbol-narrow"}}</li>
+            <li class="list-group-item"><b>Daily Price:</b> {{car.dailyPrice | currency:"TRY":"symbol-narrow"}}</li>
             <li class="list-group-item"><b>Description:</b> {{car.description}}</li>
           </ul>
     </div>
@@ -31,24 +31,30 @@
 <hr>
 <br>
 <div class=" row">
-  <div class=col-md-4>
+  <div class=col-md-3>
     <div class="form-group">
       <label for="customer" class="form-label">Customer</label>
-      <select class="form-select" id="customer" aria-label="Default select example">
+      <select class="form-select" [(ngModel)]="customerId" id="customer" aria-label="Default select example">
         <option *ngFor="let customer of customers" value="{{customer.customerId}}">{{customer.firstName}} {{customer.lastName}} - {{customer.companyName}}</option>
       </select>
     </div>
   </div>
-  <div class=col-md-4>
+  <div class=col-md-3>
     <div class="form-group">
       <label for="rentDate" class="form-label">Rent Date</label>
       <input type="date" [(ngModel)]="rentDate" (change) = "checkCarAvaliable()" class="form-control" id="rentDate">
     </div>
   </div>
-  <div class=col-md-4>
+  <div class=col-md-3>
     <div class="form-group">
       <label for="returnDate" class="form-label">Return Date</label>
       <input type="date" [(ngModel)]="returnDate" (change) = "checkCarAvaliable()" class="form-control" id="returnDate">
+    </div>
+  </div>
+  <div class=col-md-3>
+    <div class="form-group">
+      <label for="totalPrice" class="form-label">Total Price</label>
+      <input type="text" class="form-control" value="{{totalPrice | currency:'TRY':'symbol-narrow'}}" id="totalPrice" disabled>
     </div>
   </div>
 </div>
@@ -61,38 +67,8 @@
 </div>
 <br>
 <div>
-  <a role="button" class="btn btn-outline-dark float-end" href="">Back</a>
-  <!-- <a role="button" class="btn btn-primary float-end mx-1" href="/card">Rent</a> -->
-  <button class="btn btn-primary float-end mx-1" (click)="setVisible()">Rent</button>
+  <button class="btn btn-outline-dark float-end" routerLink="">Back</button>
+  <button class="btn btn-primary float-end mx-1" (click)="rental()">Rent</button>
 </div>
-<br><br>
-<div [class]="visibleProp">
-<hr>
-<br>
-<div class="w-50 mx-auto mb-5">
-  <form>
-      <div class="form-group w-100">
-          <label for="name" class="form-label">Name On Card</label>
-          <input type="text" class="form-control" id="name" placeholder="HAZAL KÖKSAL">
-      </div>
-      <br>
-      <div class="form-group w-100">
-          <label for="cardNumber" class="form-label">Card Number</label>
-          <input type="text" class="form-control" id="cardNumber" placeholder="0000-0000-0000-0000">
-      </div>
-      <br>
-      <div class="form-group w-50">
-          <label for="eDate" class="form-label">Expiration Date</label>
-          <input type="text" class="form-control" id="eDate" placeholder="00/00">
-      </div>
-      <br>
-      <div class="form-group w-50">
-          <label for="cvv" class="form-label">CVV</label>
-          <input type="text" class="form-control" id="cvv" placeholder="000">
-      </div>
-      <br><br>
-      <a role="button" class="btn btn-primary float-end" href="">Pay</a>
-  </form>
-</div>
-</div>
+
 
