--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,29 +1,30 @@
 <div class="w-50 mx-auto">
-    <form>
         <div class="form-group w-100">
-            <label for="name" class="form-label">Name On Card</label>
-            <input type="text" class="form-control" id="name" placeholder="HAZAL KÖKSAL">
+            <label for="name" class="form-label">Cardholder Name</label>
+            <input type="text" [(ngModel)]="cardholderName" class="form-control" id="name" placeholder="HAZAL KÖKSAL">
         </div>
         <br>
         <div class="form-group w-100">
             <label for="cardNumber" class="form-label">Card Number</label>
-            <input type="text" class="form-control" id="cardNumber" placeholder="0000-0000-0000-0000">
+            <input type="text" [(ngModel)]="cardNumber" class="form-control" id="cardNumber" placeholder="0000-0000-0000-0000">
         </div>
         <br>
         <div class="form-group w-50">
             <label for="eDate" class="form-label">Expiration Date</label>
-            <input type="text" class="form-control" id="eDate" placeholder="00/00">
+            <input type="text" [(ngModel)]="expirationDate" class="form-control" id="eDate" placeholder="00/00">
         </div>
         <br>
         <div class="form-group w-50">
             <label for="cvv" class="form-label">CVV</label>
-            <input type="text" class="form-control" id="cvv" placeholder="000">
+            <input type="text" [(ngModel)]="cvv" class="form-control" id="cvv" placeholder="000">
         </div>
         <br><br>
         <button class="btn btn-outline-dark float-end" routerLink="/cardetail/{{rental.carId}}">Back</button>
-        <button class="btn btn-primary float-end mx-1" routerLink="">Pay</button>
-    </form>
+        <button class="btn btn-primary float-end mx-1" (click)="createCard()">Pay</button> 
 </div>
+
+
+
 
 
 
