--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -19,8 +19,8 @@
                     <td>{{rental.rentalId}}</td>
                     <td>{{rental.carName}}</td>
                     <td>{{rental.customerName}}</td>
-                    <td>{{rental.rentDate | date:'dd/MM/yyyy hh:mm'}}</td>
-                    <td>{{rental.returnDate | date:'dd/MM/yyyy hh:mm'}}</td>
+                    <td>{{rental.rentDate | date:'dd/MM/yyyy'}}</td>
+                    <td>{{rental.returnDate | date:'dd/MM/yyyy'}}</td>
                 </tr>
             </tbody>  
         </table>
