--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -19,7 +19,7 @@
             <input type="text" [(ngModel)]="cvv" class="form-control" id="cvv" placeholder="000">
         </div>
         <br><br>
-        <button class="btn btn-outline-dark float-end" routerLink="/cardetail/{{rental.carId}}">Back</button>
+        <button class="btn btn-outline-dark float-end" routerLink="/cars/cardetail/{{rental.carId}}">Back</button>
         <button class="btn btn-primary float-end mx-1" (click)="createCard()">Pay</button> 
 </div>
 
