--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -10,10 +10,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/brands">Brands</a>
+            <a class="nav-link active" href="/brands">Brands</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/colors">Colors</a>
+            <a class="nav-link active" href="/colors">Colors</a>
           </li>
         </ul>
         <form class="d-flex">
