--- a/src/app/components/brand-add/brand-add.component.html
+++ b/src/app/components/brand-add/brand-add.component.html
@@ -1,1 +1,21 @@
-<p>brand-add works!</p>
+<div class="content">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h5 class="title">Brand</h5>
+            </div>
+            <div class="card-body">
+                <form [formGroup]="brandAddForm">
+                    <div class="form-group mb-3">
+                        <label for="brandName" class="form-label">Brand Name</label>
+                        <input type="text" class="form-control" id="brandName" formControlName="brandName" placeholder="enter brand name...">
+                    </div>
+                </form>                
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-outline-dark float-end" routerLink="/brands">Back</button>
+                <button class="btn btn-fill btn-primary float-end mx-1" (click)="add()">Add</button>
+            </div>
+        </div>
+    </div>
+</div>
