--- a/src/app/components/brand-update/brand-update.component.html
+++ b/src/app/components/brand-update/brand-update.component.html
@@ -1,1 +1,26 @@
-<p>brand-update works!</p>
+<div class="content">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h5 class="title">Brand</h5>
+            </div>
+            <div class="card-body">
+                <form [formGroup]="brandUpdateForm">
+                    <div class="form-group mb-3">
+                        <label for="brandId" class="form-label">Brand Id</label>
+                        <input type="number" class="form-control" id="brandId" formControlName="brandId" placeholder="" readonly>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="brandName" class="form-label">Brand Name</label>
+                        <input type="text" class="form-control" id="brandName" formControlName="brandName" placeholder="enter brand name...">
+                    </div>
+                </form>                
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-outline-dark float-end" routerLink="/brands">Back</button>
+                <button class="btn btn-fill btn-primary float-end mx-1" (click)="update()">Update</button>
+            </div>
+        </div>
+    </div>
+</div>
+
