--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -17,8 +17,8 @@
           </li>
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-secondary" type="submit">Search</button>
+          <button class="btn btn-outline-dark mx-1" routerLink="/login">Log in</button>
+          <button class="btn btn-dark" routerLink="/signup">Sign up</button>
         </form>
       </div>
     </div>
