--- a/src/app/components/carDetail/car-detail/car-detail.component.html
+++ b/src/app/components/carDetail/car-detail/car-detail.component.html
@@ -1,9 +1,10 @@
 <div class="row">
-    <div class="col-md-9">
+  <div class="col-md-1"></div>
+    <div class="col-md-7">
           <div id="carouselExampleControls" class="carousel slide carousel-dark" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div *ngFor="let carImage of carImages" [class]="getCurrentImageClass(carImage)">
-                 <img src="https://localhost:44334//{{carImage.carImagePath}}" class="d-block w-100" alt="https://localhost:44334//{{carImage.carImagePath}}">
+                 <img src="https://localhost:44334/{{carImage.carImagePath}}" class="d-block w-100" alt="https://localhost:44334/{{carImage.carImagePath}}">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
@@ -26,6 +27,7 @@
             <li class="list-group-item"><b>Description:</b> {{car.description}}</li>
           </ul>
     </div>
+    <div class="col-md-1"></div>
 </div>
 <br>
 <hr>
@@ -70,5 +72,6 @@
   <button class="btn btn-outline-dark float-end" routerLink="">Back</button>
   <button class="btn btn-primary float-end mx-1" (click)="createRental()">Rent</button>
 </div>
+<div style="height: 50px;"></div>
 
 
