--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <body class="text-center">
     <main class="form-signin">
       <form [formGroup]="loginForm">
-        <h1 class="h3 mb-3 fw-normal">Welcome</h1>
+        <h1 class="h3 mb-3 fw-normal">Please log in</h1>
     
         <div class="form-floating">
           <input formControlName="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
