--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -18,7 +18,7 @@
         </ul>
         <form class="d-flex">
           <button class="btn btn-outline-dark mx-1" routerLink="/login">Log in</button>
-          <button class="btn btn-dark" routerLink="/signup">Sign up</button>
+          <button class="btn btn-dark" routerLink="/register">Sign up</button>
         </form>
       </div>
     </div>
