--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="/brands">Brands</a>
@@ -16,9 +16,13 @@
             <a class="nav-link active" href="/colors">Colors</a>
           </li>
         </ul>
-        <form class="d-flex">
+        <form *ngIf="!token" class="d-flex">
           <button class="btn btn-outline-dark mx-1" routerLink="/login">Log in</button>
           <button class="btn btn-dark" routerLink="/register">Sign up</button>
+        </form>
+        <form *ngIf="token" class="d-flex">
+          <div  class="mx-3 mt-2">{{userName}}</div>
+          <button class="btn btn-outline-dark" (click)="logout()">Log out</button>
         </form>
       </div>
     </div>
