--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -11,6 +11,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Company Name</th>
+                    <th>Findex Point</th>
                 </tr>
             </thead>
             <tbody>
@@ -19,6 +20,7 @@
                     <td>{{customer.firstName}}</td>
                     <td>{{customer.lastName}}</td>
                     <td>{{customer.companyName}}</td>
+                    <td>{{customer.findexPoint}} P</td>
                 </tr>
             </tbody>  
         </table>
