--- a/src/app/components/carDetail/car-detail/car-detail.component.html
+++ b/src/app/components/carDetail/car-detail/car-detail.component.html
@@ -70,7 +70,7 @@
 <br>
 <div>
   <button class="btn btn-outline-dark float-end" routerLink="">Back</button>
-  <button class="btn btn-primary float-end mx-1" (click)="createRental()">Rent</button>
+  <button class="btn btn-primary float-end mx-1" (click)="rent()">Rent</button>
 </div>
 <div style="height: 50px;"></div>
 
