--- a/src/app/components/car-add/car-add.component.html
+++ b/src/app/components/car-add/car-add.component.html
@@ -34,6 +34,10 @@
                         <label for="description" class="form-label">Description</label>
                         <input type="text" class="form-control" id="description" formControlName="description" placeholder="enter description...">
                     </div>
+                    <div class="form-group mb-3">
+                        <label for="findexPoint" class="form-label">Findex Point</label>
+                        <input type="number" class="form-control" id="findexPoint" formControlName="findexPoint" placeholder="enter findex point...">
+                    </div>
                 </form>                
             </div>
             <div class="card-footer">
