--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,7 +2,7 @@
     <form [formGroup]="cardForm">
         <div class="form-group w-100">
             <label for="cardholderName" class="form-label">Cardholder Name</label>
-            <input type="text" formControlName="cardholderName" class="form-control" id="cardholderName" style="text-transform:uppercase" placeholder="HAZAL KÖKSAL">
+            <input type="text" formControlName="cardholderName" class="form-control" id="cardholderName" placeholder="HAZAL KÖKSAL">
         </div>
         <br>
         <div class="form-group w-100">
@@ -20,6 +20,11 @@
             <input type="text" formControlName="cvv" class="form-control" id="cvv" placeholder="000">
         </div>
     </form>
+    <br>
+    <div *ngIf="savedCard==null" class="form-check">
+        <input class="form-check-input" type="checkbox" [(ngModel)]="checkStatus" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">Save my card</label>
+    </div>
     <br><br>
     <div>
         <button class="btn btn-outline-dark float-end" routerLink="/cars/cardetail/{{rental.carId}}">Back</button>
