--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,25 +1,25 @@
 <div class="w-50 mx-auto">
-    <form [formGroup]="cardForm">
+    <div>
         <div class="form-group w-100">
             <label for="cardholderName" class="form-label">Cardholder Name</label>
-            <input type="text" formControlName="cardholderName" class="form-control" id="cardholderName" placeholder="HAZAL KÖKSAL">
+            <input type="text" [(ngModel)]="cardholderName" class="form-control" id="cardholderName" placeholder="HAZAL KÖKSAL">
         </div>
         <br>
         <div class="form-group w-100">
             <label for="cardNumber" class="form-label">Card Number</label>
-            <input type="text" formControlName="cardNumber" class="form-control" id="cardNumber" placeholder="0000-0000-0000-0000">
+            <input type="text" [(ngModel)]="cardNumber" class="form-control" id="cardNumber" placeholder="0000-0000-0000-0000">
         </div>
         <br>
         <div class="form-group w-50">
             <label for="eDate" class="form-label">Expiration Date</label>
-            <input type="text" formControlName="expirationDate" class="form-control" id="eDate" placeholder="00/00">
+            <input type="text" [(ngModel)]="expirationDate" class="form-control" id="eDate" placeholder="00/00">
         </div>
         <br>
         <div class="form-group w-50">
             <label for="cvv" class="form-label">CVV</label>
-            <input type="text" formControlName="cvv" class="form-control" id="cvv" placeholder="000">
+            <input type="text" [(ngModel)]="cvv" class="form-control" id="cvv" placeholder="000">
         </div>
-    </form>
+    </div>
     <br>
     <div *ngIf="savedCard==null" class="form-check">
         <input class="form-check-input" type="checkbox" [(ngModel)]="checkStatus" id="flexCheckDefault">
