--- a/src/app/components/carDetail/car-detail/car-detail.component.html
+++ b/src/app/components/carDetail/car-detail/car-detail.component.html
@@ -29,18 +29,12 @@
     </div>
     <div class="col-md-1"></div>
 </div>
-<br>
+<div *ngIf="customerId">
+  <br>
 <hr>
 <br>
 <div class=" row">
-  <div class=col-md-3>
-    <div class="form-group">
-      <label for="customer" class="form-label">Customer</label>
-      <select class="form-select" [(ngModel)]="customerId" id="customer" aria-label="Default select example">
-        <option *ngFor="let customer of customers" value="{{customer.customerId}}">{{customer.firstName}} {{customer.lastName}} - {{customer.companyName}}</option>
-      </select>
-    </div>
-  </div>
+  <div class="col-md-2"></div>
   <div class=col-md-3>
     <div class="form-group">
       <label for="rentDate" class="form-label">Rent Date</label>
@@ -53,12 +47,13 @@
       <input type="date" [(ngModel)]="returnDate" (change) = "checkCarAvaliable()" class="form-control" id="returnDate">
     </div>
   </div>
-  <div class=col-md-3>
+  <div class=col-md-2>
     <div class="form-group">
       <label for="totalPrice" class="form-label">Total Price</label>
       <input type="text" class="form-control" value="{{totalPrice | currency:'TRY':'symbol-narrow'}}" id="totalPrice" disabled>
     </div>
   </div>
+  <div class="col-md-2"></div>
 </div>
 <br>
 <div *ngIf="carAvaliableSuccess==true" class="alert alert-success">
@@ -67,11 +62,13 @@
 <div *ngIf="carAvaliableSuccess==false" class="alert alert-danger">
   {{carAvaliableMessage}}
 </div>
-<br>
+<br><br>
 <div>
   <button class="btn btn-outline-dark float-end" routerLink="">Back</button>
   <button class="btn btn-primary float-end mx-1" (click)="rent()">Rent</button>
 </div>
 <div style="height: 50px;"></div>
+</div>
+
 
 
